[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtviewer"
version = "0.1.0"
description = "A lightweight Napari-based viewer for large, tiled volumetric data"
requires-python = ">=3.10"
dependencies = [
  "napari[all]",
  "dask[array]",
  "zarr",
  "vispy",
  "qtpy",
  "cachetools",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
